# VehicleControl

./: .gitignore
src/: README.md  common_map.h
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/msg/: v2c_control.msg
src/decision/: CMakeLists.txt  package.xml
src/decision/launch/: sandtable.launch
src/decision/src/: node.cpp
src/lidar2v/: CMakeLists.txt  package.xml
src/lidar2v/scripts/: lidar_brake.py
src/sandboxGlobal_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
src/sandboxGlobal_planner/include/sandboxGlobal_planner/: common_map.h  sandboxGlobal_planner.h
src/sandboxGlobal_planner/src/: sandboxGlobal_planner.cpp
src/v2c/: CMakeLists.txt  package.xml
src/v2c/src/: v2c.cpp
src/v2i/: CMakeLists.txt  package.xml
src/v2i/include/v2i/: common_map.h
src/v2i/src/: node.cpp
